--- a/app/src/main/res/layout/dialog_time.xml
+++ b/app/src/main/res/layout/dialog_time.xml
@@ -1,27 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/date_picker_title"
+        android:id="@+id/time_picker_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="6dp"
-        android:text="@string/date_picker_title"
+        android:text="@string/time_picker_title"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="@+id/dialog_date_picker"
+        app:layout_constraintStart_toStartOf="@+id/dialog_time_picker"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <DatePicker
-        android:id="@+id/dialog_date_picker"
+    <TimePicker
+        android:id="@+id/dialog_time_picker"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/date_picker_title" />
+        app:layout_constraintTop_toBottomOf="@+id/time_picker_title" />
 
     <Button
         android:id="@+id/ok_button"
@@ -30,7 +31,7 @@
         android:layout_height="wrap_content"
         android:text="@string/ok_text"
         android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="@+id/dialog_date_picker"
-        app:layout_constraintTop_toBottomOf="@+id/dialog_date_picker" />
+        app:layout_constraintEnd_toEndOf="@+id/dialog_time_picker"
+        app:layout_constraintTop_toBottomOf="@+id/dialog_time_picker" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
